--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # Byte-compiled / optimized / DLL files
-__pycache__/
+__pycache__
 *.py[cod]
 *$py.class
 
@@ -132,4 +132,5 @@ dmypy.json
 #
 .vscode
 .DS_Store
+temp/data/
 
