--- a/eye_commander/requirements.txt
+++ b/eye_commander/requirements.txt
@@ -1,7 +1,6 @@
 absl-py==0.13.0
 astunparse==1.6.3
 attrs==21.2.0
-cached-property==1.5.2
 cachetools==4.2.2
 certifi==2021.5.30
 chardet==4.0.0
@@ -14,7 +13,6 @@ google-pasta==0.2.0
 grpcio==1.34.1
 h5py==3.1.0
 idna==2.10
-importlib-metadata==4.6.0
 keras-nightly==2.5.0.dev2021032900
 Keras-Preprocessing==1.1.2
 kiwisolver==1.3.1
@@ -23,13 +21,17 @@ matplotlib==3.4.2
 mediapipe==0.8.6
 numpy==1.19.5
 oauthlib==3.1.1
-opencv-contrib-python==4.5.2.54
+opencv-contrib-python==4.5.3.56
+opencv-python==4.5.3.56
 opt-einsum==3.3.0
-Pillow==8.3.0
+Pillow==8.3.1
 protobuf==3.17.3
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
-pyglet==1.5.18
+pynput==1.7.3
+pyobjc-core==7.3
+pyobjc-framework-Cocoa==7.3
+pyobjc-framework-Quartz==7.3
 pyparsing==2.4.7
 python-dateutil==2.8.1
 requests==2.25.1
@@ -46,4 +48,3 @@ typing-extensions==3.7.4.3
 urllib3==1.26.6
 Werkzeug==2.0.1
 wrapt==1.12.1
-zipp==3.5.0
