--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -12,3 +12,5 @@ jobs:
         uses: actions/checkout@v2
       - name: Set Up Python
         uses: actions/setup-python@v2
+      - name: Step into root
+        run: cd ./DeepLearning_Pipeline
