--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -14,3 +14,5 @@ jobs:
         uses: actions/setup-python@v2
       - name: Step into root
         run: cd ./DeepLearning_Pipeline
+      - name: Install dependencies
+        run: pip install -r requirements.txt
