--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -13,6 +13,6 @@ jobs:
       - name: Set Up Python
         uses: actions/setup-python@v2
       - name: Step into root
-        run: cd ./DeepLearning_Pipeline
+        run: cd ./eye_commander
       - name: Install dependencies
         run: pip install -r requirements.txt
