--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -12,5 +12,12 @@ jobs:
         uses: actions/checkout@v2
       - name: Set Up Python
         uses: actions/setup-python@v2
+      - uses: actions/cache@v2
+        name: Cache dependencies
+        with:
+          path: ~/.cache/pip
+          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-
       - name: Install dependencies
         run: pip install -r ./eye_commander/requirements.txt
