--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -35,7 +35,7 @@ jobs:
 
       # Run pyinstaller to generated the executables
       - name: Bundle with pyinstaller
-        run: pyinstaller entry.py
+        run: pyinstaller entry.py --onefile --name EyeCommander
 
       # Upload the result to Github
       - name: Upload Build
