--- a/eye_commander/requirements.txt
+++ b/eye_commander/requirements.txt
@@ -34,6 +34,7 @@ python-dateutil==2.8.1
 requests==2.25.1
 requests-oauthlib==1.3.0
 rsa==4.7.2
+scikit-image=0.18.2
 six==1.15.0
 tensorboard==2.5.0
 tensorboard-data-server==0.6.1
