--- a/.github/workflows/pull-request-build.yml
+++ b/.github/workflows/pull-request-build.yml
@@ -35,7 +35,7 @@ jobs:
 
       # Run pyinstaller to generated the executables
       - name: Bundle with pyinstaller
-        run: pyinstaller example.spec --onedir --console --name EyeCommander
+        run: pyinstaller installer.spec --onedir --console --name EyeCommander
 
       # Upload the result to Github
       - name: Upload Build
