--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -1,8 +1,5 @@
 name: Build and Release
-on:
-  push:
-    tags:
-      - "*"
+on: push
 
 jobs:
   build:
@@ -38,10 +35,11 @@ jobs:
       - name: Bundle with pyinstaller
         run: pyinstaller installer.spec --onedir --console --name EyeCommander
 
-      - uses: ncipollo/release-action@v1
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
         with:
-          artifacts: "body/EyeCommander.exe"
-          token: ${{ secrets.GITHUB_TOKEN }}
+          files: dist/EyeCommander.exe
 
       # Upload the result to Github
       - name: Upload Build
