--- a/eye_commander/requirements.txt
+++ b/eye_commander/requirements.txt
@@ -28,6 +28,7 @@ Pillow==8.3.1
 protobuf==3.17.3
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
+pygame==2.0.1
 pynput==1.7.3
 pyobjc-core==7.3
 pyobjc-framework-Cocoa==7.3
