--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -37,14 +37,14 @@ jobs:
       # Run pyinstaller to generated the executables
       - name: Bundle with pyinstaller
         run: pyinstaller installer.spec --onedir --console --name EyeCommander
-        
+
       - name: Windows signtool.exe code sign action
         uses: DanaBear/code-sign-action@v4
         with:
-          certificate: '${{ secrets.CERTP12B64 }}'
-          certificatesha1: '${{ secrets.CERTHASH }}'
-          password: '${{ secrets.PASSWORD }}'
-          folder: 'files'
+          certificate: "${{ secrets.CERTP12B64 }}"
+          certificatesha1: "${{ secrets.CERTHASH }}"
+          password: "${{ secrets.PASSWORD }}"
+          folder: "dist"
           recursive: false
 
       - name: Release
