--- a/.github/workflows/pull-request-build.yml
+++ b/.github/workflows/pull-request-build.yml
@@ -37,6 +37,15 @@ jobs:
       - name: Bundle with pyinstaller
         run: pyinstaller installer.spec --onedir --console --name EyeCommander
 
+      - name: Windows signtool.exe code sign action
+        uses: DanaBear/code-sign-action@v4
+        with:
+          certificate: "${{ secrets.CERTP12B64 }}"
+          certificatesha1: "${{ secrets.CERTHASH }}"
+          password: "${{ secrets.PASSWORD }}"
+          folder: "dist"
+          recursive: false
+
       # Upload the result to Github
       - name: Upload Build
         uses: actions/upload-artifact@v2
