putting sha1 back

--- a/.github/workflows/build-and-release.yml
+++ b/.github/workflows/build-and-release.yml
@@ -43,6 +43,7 @@ jobs:
         with:
           certificate: "${{ secrets.CERTP12B64 }}"
           password: "${{ secrets.CERTPASSWORD }}"
+          certificatesha1: "${{ secrets.CERTHASH }}"
           folder: "dist"
           recursive: false
 
