--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   },
   "dependencies": {
     "electron-serve": "^1.1.0",
-    "electron-store": "^8.0.1"
+    "electron-store": "^8.0.1",
+    "node-key-sender": "^1.0.11"
   },
   "devDependencies": {
     "@material-ui/core": "^4.12.3",
