--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   "dependencies": {
     "electron-serve": "^1.1.0",
     "electron-store": "^8.0.1",
-    "node-key-sender": "^1.0.11"
+    "robotjs": "^0.6.0"
   },
   "devDependencies": {
     "@material-ui/core": "^4.12.3",
