--- a/forge-demo/package.json
+++ b/forge-demo/package.json
@@ -85,6 +85,7 @@
     "@mediapipe/camera_utils": "^0.3.1632432234",
     "@mediapipe/drawing_utils": "^0.3.1620248257",
     "@mediapipe/face_mesh": "^0.4.1633559619",
+    "@tensorflow/tfjs": "^3.11.0",
     "copy-webpack-plugin": "^9.0.1",
     "electron-squirrel-startup": "^1.0.0",
     "react": "^17.0.2",
