Finish inital step

--- a/forge-demo/package.json
+++ b/forge-demo/package.json
@@ -82,12 +82,18 @@
     "style-loader": "^3.0.0"
   },
   "dependencies": {
+    "@emotion/react": "^11.5.0",
+    "@emotion/styled": "^11.3.0",
+    "@fontsource/roboto": "^4.5.1",
     "@mediapipe/camera_utils": "^0.3.1632432234",
     "@mediapipe/drawing_utils": "^0.3.1620248257",
     "@mediapipe/face_mesh": "^0.4.1633559619",
+    "@mui/icons-material": "^5.0.5",
+    "@mui/material": "^5.0.6",
     "@tensorflow/tfjs": "^3.11.0",
     "copy-webpack-plugin": "^9.0.1",
     "electron-squirrel-startup": "^1.0.0",
+    "electron-store": "^8.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-webcam": "^6.0.0",
