--- a/forge-demo/package.json
+++ b/forge-demo/package.json
@@ -55,7 +55,7 @@
                   "js": "./src/renderer.js",
                   "name": "main_window",
                   "preload": {
-                    "js": "./src/preload.ts"
+                    "js": "./src/preload.js"
                   }
                 }
               ]
