--- a/.github/workflows/electron-builder.yml
+++ b/.github/workflows/electron-builder.yml
@@ -9,6 +9,10 @@ jobs:
         os: [macos-latest, ubuntu-latest, windows-latest]
 
     steps:
+      - name: Install robotjs deps for linux
+        if: matrix.os == 'ubuntu-latest'
+        run: sudo apt-get install -y libxml2-utils
+
       - name: Check out Git repository
         uses: actions/checkout@v1
 
