--- a/.github/workflows/electron-builder.yml
+++ b/.github/workflows/electron-builder.yml
@@ -7,6 +7,7 @@ jobs:
     strategy:
       matrix:
         os: [macos-latest, ubuntu-latest, windows-latest]
+        fail-fast: false
 
     steps:
       - name: Install robotjs deps for linux
