--- a/forge-demo/package.json
+++ b/forge-demo/package.json
@@ -92,6 +92,7 @@
     "@mui/material": "^5.0.6",
     "@tensorflow/tfjs": "^3.11.0",
     "copy-webpack-plugin": "^9.0.1",
+    "electron-builder": "^22.13.1",
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^8.0.1",
     "react": "^17.0.2",
