--- a/forge-demo/package.json
+++ b/forge-demo/package.json
@@ -51,9 +51,11 @@
     "copy-webpack-plugin": "^9.0.1",
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^8.0.1",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-webcam": "^6.0.0",
-    "robotjs": "^0.6.0"
+    "robotjs": "^0.6.0",
+    "use-sound": "^4.0.1"
   }
 }
