--- a/.github/workflows/electron-builder.yml
+++ b/.github/workflows/electron-builder.yml
@@ -1,21 +1,12 @@
 name: Electron Builder
-on: [pull_request]
+on: [push, pull_request]
 
 jobs:
-  release:
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [macos-latest, ubuntu-latest, windows-latest]
-
+  MacBuild:
+    runs-on: macos-latest
     steps:
       - name: Check out Git repository
         uses: actions/checkout@v1
-
-      - name: Install robotjs deps for linux
-        if: matrix.os == 'ubuntu-latest'
-        run: sudo apt-get install -y libxml2-utils libxtst-dev libpng++-dev
 
       - name: Install Node.js, NPM and Yarn
         uses: actions/setup-node@v1
@@ -35,7 +26,11 @@ jobs:
 
       - uses: actions/upload-artifact@v2
         with:
-          name: ${{ runner.os }}-build
-          path: out
+          name: MacRelease
+          path: out/make/EyeCommander.dmg
           # Github has size limits so this avoids hitting them
           retention-days: 1
+
+          # - name: Install robotjs deps for linux
+# if: matrix.os == 'ubuntu-latest'
+# run: sudo apt-get install -y libxml2-utils libxtst-dev libpng++-dev
