--- a/.github/workflows/electron-builder.yml
+++ b/.github/workflows/electron-builder.yml
@@ -4,6 +4,9 @@ on: [push, pull_request]
 jobs:
   MacBuild:
     runs-on: macos-latest
+    env:
+      APPLE_ID: ${{ secrets.APPLE_ID }}
+      APPLE_ID_PASSWORD: ${{ secrets.APPLE_ID_PASSWORD }}
     steps:
       - name: Check out Git repository
         uses: actions/checkout@v1
@@ -12,6 +15,11 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 16
+
+      - uses: apple-actions/import-codesign-certs@v1
+        with:
+          p12-file-base64: ${{ secrets.CERTIFICATES_P12 }}
+          p12-password: ${{ secrets.CERTIFICATES_P12_PASSWORD }}
 
       - name: Install deps
         run: yarn install
