--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-dom": "^17.0.2",
     "react-webcam": "^6.0.0",
     "robotjs": "^0.6.0",
+    "update-electron-app": "^2.0.1",
     "use-sound": "^4.0.1"
   }
 }
