--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "eye-commander",
+  "name": "eyecommander",
   "productName": "EyeCommander",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "Detect blinks and convert them to switch output",
   "main": ".webpack/main",
   "scripts": {
