Add preinstall step for windows

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "description": "Detect blinks and convert them to switch output",
   "main": ".webpack/main",
   "scripts": {
+    "preinstall": "node ./setup-win-deps.js",
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
