--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "robotjs": "^0.6.0",
     "update-electron-app": "^2.0.1",
     "use-sound": "^4.0.1",
-    "webpack-node-externals": "^3.0.0"
+    "webpack-node-externals": "^3.0.0",
+    "ffi-napi": "4.0.3"
   }
 }
