--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "eyecommander",
   "productName": "EyeCommander",
-  "version": "1.0.16",
+  "version": "1.0.17",
   "description": "Detect blinks and convert them to switch output",
   "main": ".webpack/main",
   "scripts": {
@@ -53,15 +53,16 @@
     "electron-store": "^8.0.1",
     "eslint": "^8.1.0",
     "eslint-plugin-react": "^7.26.1",
+    "execa": "^5.1.1",
+    "ffi-napi": "4.0.3",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-webcam": "^6.0.0",
+    "ref-napi": "3.0.3",
     "robotjs": "^0.6.0",
     "update-electron-app": "^2.0.1",
     "use-sound": "^4.0.1",
-    "webpack-node-externals": "^3.0.0",
-    "ffi-napi": "4.0.3",
-    "ref-napi": "3.0.3"
+    "webpack-node-externals": "^3.0.0"
   }
 }
