--- a/.github/workflows/electron-builder.yml
+++ b/.github/workflows/electron-builder.yml
@@ -106,3 +106,47 @@ jobs:
           path: out
           # Github has size limits so this avoids hitting them
           retention-days: 1
+
+  LinuxBuild:
+    runs-on: ubuntu-latest
+    env:
+      GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    steps:
+      - name: Check out Git repository
+        uses: actions/checkout@v1
+
+      - name: Install Node.js, NPM and Yarn
+        uses: actions/setup-node@v1
+        with:
+          node-version: 16
+
+      - uses: actions/github-script@v5
+        id: should-publish
+        with:
+          result-encoding: string
+          script: |
+            const script = require('./check-for-version-bump.js');
+            return await script({ github, context, core })
+
+      - name: Install deps
+        run: yarn install
+
+      - name: Electron rebuild
+        # Ignore when this fails, its a total hack but for some reason
+        # electron forge only builds on start, run-as-node forces it to crash out
+        run: yarn start --run-as-node || true
+
+      - name: Forge publish
+        if: ${{ steps.should-publish.outputs.result == 'publish' }}
+        run: yarn run publish
+
+      - name: Forge make
+        if: ${{ steps.should-publish.outputs.result == 'make' }}
+        run: yarn make
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: WindowsRelease
+          path: out
+          # Github has size limits so this avoids hitting them
+          retention-days: 1
