Upload artifact no matter what

--- a/.github/workflows/electron-builder.yml
+++ b/.github/workflows/electron-builder.yml
@@ -148,6 +148,7 @@ jobs:
         run: yarn make
 
       - uses: actions/upload-artifact@v2
+        if: failure()
         with:
           name: LinuxRelease
           path: out
