--- a/.github/workflows/release-template.yml
+++ b/.github/workflows/release-template.yml
@@ -25,6 +25,6 @@ jobs:
           body: |
             To install on your machine download the installer below.
 
-            On **WINDOWS** you should download `EyeCommander-x.x.x.Setup.exe` file.
+            On **WINDOWS** you should download `EyeCommander-x.x.x.Setup.exe` file. When running the application on windows make sure you run as Administrator.
 
             On **OS** you should download `EyeCommander.dmg`
