Use published fork

--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "@electron-forge/plugin-webpack": "6.0.0-beta.61",
     "@electron-forge/publisher-github": "^6.0.0-beta.61",
     "@timfish/forge-externals-plugin": "^0.1.2",
-    "@vercel/webpack-asset-relocator-loader": "1.7.0",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.0.0",
     "electron": "15.3.0",
@@ -41,13 +40,13 @@
     "@emotion/react": "^11.5.0",
     "@emotion/styled": "^11.3.0",
     "@fontsource/roboto": "^4.5.1",
+    "@marshallofsound/webpack-asset-relocator-loader": "^0.5.0",
     "@mediapipe/camera_utils": "^0.3.1632432234",
     "@mediapipe/drawing_utils": "^0.3.1620248257",
     "@mediapipe/face_mesh": "^0.4.1633559619",
     "@mui/icons-material": "^5.0.5",
     "@mui/material": "^5.0.6",
     "@tensorflow/tfjs": "^3.11.0",
-    "@zeit/webpack-asset-relocator-loader": "https://github.com/MarshallOfSound/webpack-asset-relocator-loader",
     "copy-webpack-plugin": "^9.0.1",
     "electron-log": "^4.4.1",
     "electron-squirrel-startup": "^1.0.0",
