--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "execa": "^5.1.1",
     "ffi-napi": "4.0.3",
     "lodash": "^4.17.21",
+    "rcedit": "^3.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-webcam": "^6.0.0",
