--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "electron-log": "^4.4.1",
     "electron-squirrel-startup": "^1.0.0",
     "electron-store": "^8.0.1",
-    "eslint": "^8.1.0",
+    "eslint": "7.32.0",
     "eslint-plugin-react": "^7.26.1",
     "execa": "^5.1.1",
     "ffi-napi": "4.0.3",
