--- a/.github/workflows/electron-builder.yml
+++ b/.github/workflows/electron-builder.yml
@@ -84,6 +84,9 @@ jobs:
             const script = require('./check-for-version-bump.js');
             return await script({ github, context, core })
 
+      - name: Set node config to set msvs_version to 2015
+        run: npm config set msvs_version 2015
+
       - name: Install deps
         run: npm install
 
