Try local install

--- a/.github/workflows/electron-builder.yml
+++ b/.github/workflows/electron-builder.yml
@@ -88,7 +88,7 @@ jobs:
         run: ls "C:\Program Files\Microsoft Visual Studio"
 
       - name: Install latest node-gyp
-        run: npm install -g node-gyp@9.0.0
+        run: npm install node-gyp@9.0.0
 
       - name: Set node config to set msvs_version to 2022
         run: npm config set msvs_version 2022
