--- a/.github/workflows/electron-builder.yml
+++ b/.github/workflows/electron-builder.yml
@@ -84,8 +84,11 @@ jobs:
             const script = require('./check-for-version-bump.js');
             return await script({ github, context, core })
 
+      - name: Echo path
+        run: echo $env:LOCALAPPDATA
+
       - name: Remove cache
-        run: rm -r %LocalAppData%/node-gyp/Cache
+        run: rm -r $env:LOCALAPPDATA/node-gyp/Cache
 
       - name: Install deps
         run: yarn install
