--- a/.github/workflows/electron-builder.yml
+++ b/.github/workflows/electron-builder.yml
@@ -100,6 +100,12 @@ jobs:
         continue-on-error: true
         run: rm -r $env:LOCALAPPDATA/node-gyp/Cache
 
+      - name: Install new node-gyp
+        run: npm i node-gyp@9.0.0
+
+      - name: Use new node-gyp
+        run: npm config set node_gyp "./node_modules/node-gyp/bin/node-gyp.js"
+
       - name: Install deps
         run: yarn install
 
